# curriculum-3

./: README.md
compute/: Anchor.toml  README.md
compute/programs/compute/: Cargo.toml
compute/programs/compute/src/: lib.rs
compute/tests/: compute.ts
compute/voting-program/: context.md
compute/voting-program/programs/voting-program/: Cargo.toml
compute/voting-program/programs/voting-program/src/: lib.rs
compute/voting-program/tests/: voting-program.ts
management-program/: Anchor.toml
management-program/programs/management-program/: Cargo.toml
management-program/programs/management-program/src/: lib.rs
management-program/tests/: management-program.ts
multiuser-role/: Anchor.toml
multiuser-role/programs/multiuser-role/: Cargo.toml
multiuser-role/programs/multiuser-role/src/: lib.rs
multiuser-role/tests/: multiuser-role.ts
voting-program/: Anchor.toml
voting-program/programs/voting-program/src/: lib.rs
